--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<button class="button button-cart">
 					<img class="button-icon" src="img/cart.svg" alt="icon: cart">
 					<span class="button-text">Cart</span>
-					<span class="button-text cart-count"></span>
+					<span class="button-text cart-count">0</span>
 				</button>
 			</div>
 		</div>
@@ -544,7 +544,11 @@
 				<h2 class="modal-title">Cart</h2>
 				<button class="modal-close">x</button>
 			</header>
+			
 			<table class="cart-table">
+				<button class="clear-cart">
+					<span class="button-text">Clear cart</span>
+				</button>
 				<colgroup>
 					<col class="col-goods">
 					<col class="col-price">
@@ -605,7 +609,7 @@
 			<form class="modal-form" action="">
 				<input class="modal-input" type="text" placeholder="Имя" name="nameCustomer">
 				<input class="modal-input" type="text" placeholder="Телефон" name="phoneCustomer">
-				<button class="button cart-buy">
+				<button class="button cart-buy" type="submit">
 					<span class="button-text">Checkout</span>
 				</button>
 			</form>
